<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="controllers.startPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/startpage"/>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text=""
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Vælg din diagnose for at blive tildelt en støttegruppe"
            />


        <Spinner
            android:id="@+id/spinnerDiagnose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints="Diagnose"
            />

        <Button
            android:id="@+id/submitDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mød din støttegruppe!"
            android:textColor="#000000"
            android:background="@drawable/buttondesignfrontpage"
            app:backgroundTint = "@null"
            />

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="250dp"
            android:text="Log ud"
            android:textColor="#000000"
            android:background="@drawable/buttondesignfrontpage"
            app:backgroundTint = "@null"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>